--- a/7.PRETRAIN_METHOD/7.3.gpt2_finetune-ENG.ipynb
+++ b/7.PRETRAIN_METHOD/7.3.gpt2_finetune-ENG.ipynb
@@ -552,7 +552,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#필요시 사용하세요.\n",
+    "cls_model.load_weights('data_out/movie_review_weights.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +629,7 @@
        "4   \"12128_7\"  \"A very accurate depiction of small time mob l..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,38 +643,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_data_bow_sents = []\n",
     "test_data_bow_idx = []\n",
     "\n",
-    "for test_sent, test_idx in zip(test_data_bow[\"review\"][:50], test_data_bow[\"id\"][:50]):\n",
+    "for test_sent, test_idx in zip(test_data_bow[\"review\"], test_data_bow[\"id\"]):\n",
     "    try:\n",
-    "        token_sent = class_tokenizer(preprocessing(train_sent, remove_stopwords = False), MAX_LEN)\n",
+    "        token_sent = class_tokenizer(preprocessing(test_sent, remove_stopwords = False), MAX_LEN)\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(\"Error message: {}\".format(e))\n",
     "        print(\"sentence: {}\".format(test_sent))\n",
     "        continue\n",
     "        \n",
-    "    test_data_bow_sents.append(token_sent) #append는 빼 놓고 한다.\n",
+    "    test_data_bow_sents.append(token_sent)\n",
     "    test_data_bow_idx.append(test_idx)\n",
     "\n",
-    "train_data_bow_sents = np.asarray(train_data_bow_sents, dtype=np.int32)"
+    "test_data_bow_sents = np.asarray(test_data_bow_sents, dtype=np.int32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num sents, labels 50, 50\n"
+      "num sents, labels 25000, 25000\n"
      ]
     }
    ],
@@ -674,17 +684,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = cls_model.predict(test_data_bow_sents, batch_size=BATCH_SIZE)\n",
+    "predictions = cls_model.predict(test_data_bow_sents, batch_size=512)\n",
     "predictions = np.argmax(predictions, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
