--- a/7.PRETRAIN_METHOD/7.3.gpt2_finetune-ENG.ipynb
+++ b/7.PRETRAIN_METHOD/7.3.gpt2_finetune-ENG.ipynb
@@ -870,14 +870,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# sents: 50, # labels: 50\n"
+      "# sents: 404290, # labels: 404290\n"
      ]
     }
    ],
@@ -889,8 +889,8 @@
     "train_input_ids = []\n",
     "train_labels = []\n",
     "\n",
-    "for sent1, sent2, label in zip(train_data_quora['question1'][:50], train_data_quora['question2'][:50], \n",
-    "                        train_data_quora['is_duplicate'][:50]):\n",
+    "for sent1, sent2, label in zip(train_data_quora['question1'], train_data_quora['question2'], \n",
+    "                        train_data_quora['is_duplicate']):\n",
     "    \n",
     "    sent1 = re.sub(change_filter, \"\", str(sent1))\n",
     "    sent2 = re.sub(change_filter, \"\", str(sent2))\n",
@@ -1098,7 +1098,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim_model.load_weights('data_out/quora_weights.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -1188,7 +1197,7 @@
        "4                     How their can I start reading?  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,57 +1214,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# sents: 50, # labels: 50\n"
+      "# sents: 3563475, # labels: 3563475\n"
      ]
     }
    ],
    "source": [
-    "test_input_ids = []\n",
-    "test_labels = []\n",
+    "test_input_sents = []\n",
+    "test_ids = []\n",
     "\n",
-    "for sent1, sent2, label in zip(test_data_quora['question1'][:50], test_data_quora['question2'][:50], \n",
-    "                        test_data_quora['test_id'][:50]):\n",
+    "for sent1, sent2, i in zip(test_data_quora['question1'], test_data_quora['question2'], \n",
+    "                        test_data_quora['test_id']):\n",
     "    \n",
     "    sent1 = re.sub(change_filter, \"\", str(sent1))\n",
     "    sent2 = re.sub(change_filter, \"\", str(sent2))\n",
     "    \n",
     "    input_id = sim_tokenizer(sent1, sent2, MAX_LEN)\n",
     "    \n",
-    "    test_input_ids.append(input_id)\n",
-    "    test_labels.append(label)\n",
+    "    test_input_sents.append(input_id)\n",
+    "    test_ids.append(i)\n",
     "    \n",
-    "test_input_ids = np.array(test_input_ids, dtype=int)\n",
+    "test_input_sents = np.array(test_input_sents, dtype=int)\n",
     "\n",
-    "print(\"# sents: {}, # labels: {}\".format(len(test_input_ids), len(test_labels)))"
+    "print(\"# sents: {}, # labels: {}\".format(len(test_input_sents), len(test_ids)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 테스트 값 예측하기\n",
     "\n",
-    "predictions = sim_model.predict(test_input_ids, batch_size=512)"
+    "predictions = sim_model.predict(test_input_sents, batch_size=512)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "predictions = np.argmax(predictions, axis=1)\n",
     "\n",
-    "output = pd.DataFrame( data={\"test_id\":test_labels, \"is_duplicate\": list(predictions)} )\n",
+    "output = pd.DataFrame( data={\"test_id\":test_ids, \"is_duplicate\": list(predictions)} )\n",
     "output.to_csv(DATA_OUT_PATH + \"gpt2_quora_predict.csv\", index=False, quoting=3)"
    ]
   }
