--- a/7.PRETRAIN_METHOD/7.3.gpt2_finetune-ENG.ipynb
+++ b/7.PRETRAIN_METHOD/7.3.gpt2_finetune-ENG.ipynb
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "vocab = tokenizer.get_vocab()\n",
+    "# vocab = tokenizer.get_vocab()\n",
     "\n",
     "tokenizer.pad_token = '#'\n",
     "tokenizer.cls_token = '@'\n",
