--- a/7.PRETRAIN_METHOD/7.3.gpt2_finetune-KOR.ipynb
+++ b/7.PRETRAIN_METHOD/7.3.gpt2_finetune-KOR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "4   6483659  사이몬페그의 익살스런 연기가 돋보였던 영화!스파이더맨에서 늙어보이기만 했던 커스틴 ...      1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,12 +210,13 @@
     "DATA_TEST_PATH = os.path.join(DATA_IN_PATH, \"naver_movie\", \"ratings_test.txt\")\n",
     "\n",
     "train_data = pd.read_csv(DATA_TRAIN_PATH, header = 0, delimiter = '\\t', quoting = 3)\n",
+    "train_data = train_data.dropna()\n",
     "train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,11 +229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = train_data[:1000] # for test\n",
+    "# train_data = train_data[:1000] # for test\n",
     "\n",
     "train_data_sents = list()\n",
     "train_data_labels = list()\n",
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -514,23 +515,24 @@
        "4  6723715  3D만 아니었어도 별 다섯 개 줬을텐데.. 왜 3D로 나와서 제 심기를 불편하게 하죠??      0"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_data = pd.read_csv(DATA_TEST_PATH, header = 0, delimiter = '\\t', quoting = 3)\n",
+    "test_data = test_data.dropna()\n",
     "test_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = test_data[:50] # for test\n",
+    "# test_data = test_data[:50] # for test\n",
     "\n",
     "test_data_sents = list()\n",
     "test_data_labels = list()\n",
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,11 +623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_xnli = train_data_xnli[:50] # for test\n",
+    "# train_data_xnli = train_data_xnli[:50] # for test\n",
     "\n",
     "train_data_sents = list()\n",
     "\n",
@@ -644,14 +646,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# sents: 50, # labels: 50\n"
+      "# sents: 392662, # labels: 392662\n"
      ]
     }
    ],
@@ -860,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -874,11 +876,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data_xnli = test_data_xnli[:50] # for test\n",
+    "# test_data_xnli = test_data_xnli[:50] # for test\n",
     "\n",
     "test_data_sents = list()\n",
     "\n",
@@ -897,14 +899,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# sents: 50, # labels: 50\n"
+      "# sents: 5010, # labels: 5010\n"
      ]
     }
    ],
