update gpt2 kor

--- a/7.PRETRAIN_METHOD/7.3.gpt2_finetune-KOR.ipynb
+++ b/7.PRETRAIN_METHOD/7.3.gpt2_finetune-KOR.ipynb
@@ -112,8 +112,8 @@
     "tokenizer = SentencepieceTokenizer(TOKENIZER_PATH)\n",
     "vocab = nlp.vocab.BERTVocab.from_sentencepiece(TOKENIZER_PATH,\n",
     "                                               mask_token=None,\n",
-    "                                               sep_token='$',\n",
-    "                                               cls_token='@',\n",
+    "                                               sep_token='<unused0>',\n",
+    "                                               cls_token='<unused1>',\n",
     "                                               unknown_token='<unk>',\n",
     "                                               padding_token='<pad>',\n",
     "                                               bos_token='<s>',\n",
@@ -662,8 +662,6 @@
     "    return sent_clean\n",
     "\n",
     "train_data_sents = list()\n",
-    "# train_data_sent_1 = list()\n",
-    "# train_data_sent_2 = list()\n",
     "\n",
     "for train_sent_1, train_sent_2 in zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']):\n",
     "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent_1))] + \\\n",
@@ -671,20 +669,7 @@
     "    vocab[tokenizer(clean_text(train_sent_2))] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
     "    \n",
     "    train_data_sents.append(tokens)\n",
-    "#     train_data_sent_1.append(vocab[tokenizer(clean_text(train_sent_1))])\n",
-    "#     train_data_sent_2.append(vocab[tokenizer(clean_text(train_sent_2))])\n",
-    "\n",
     "train_data_sents = pad_sequences(train_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
-    "# train_data_sent_1 = pad_sequences(train_data_sent_1, MAX_LEN // 2, value=vocab[vocab.padding_token])#, padding='post')\n",
-    "# train_data_sent_2 = pad_sequences(train_data_sent_2, MAX_LEN // 2, value=vocab[vocab.padding_token])#, padding='post')\n",
-    "\n",
-    "# bos_tokens = np.asarray([[vocab[vocab.bos_token]]] * train_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# eos_tokens = np.asarray([[vocab[vocab.eos_token]]] * train_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# sep_tokens = np.asarray([[vocab[vocab.sep_token]]] * train_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# cls_tokens = np.asarray([[vocab[vocab.cls_token]]] * train_data_sent_1.shape[0], dtype=np.int64)\n",
-    "\n",
-    "# train_data_sents = np.concatenate((bos_tokens, train_data_sent_1, eos_tokens, sep_tokens, \n",
-    "#                                    bos_tokens, train_data_sent_2, eos_tokens, cls_tokens), axis=-1)\n",
     "\n",
     "train_data_sents = np.array(train_data_sents, dtype=np.int64)"
    ]
@@ -726,8 +711,6 @@
     "# dev_data_xnli = dev_data_xnli[:50] # for test\n",
     "\n",
     "dev_data_sents = list()\n",
-    "# dev_data_sent_1 = list()\n",
-    "# dev_data_sent_2 = list()\n",
     "\n",
     "for dev_sent_1, dev_sent_2 in zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']):\n",
     "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(dev_sent_1))] + \\\n",
@@ -735,20 +718,8 @@
     "    vocab[tokenizer(clean_text(dev_sent_2))] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
     "    \n",
     "    dev_data_sents.append(tokens)\n",
-    "#     dev_data_sent_1.append(vocab[tokenizer(clean_text(dev_sent_1))])\n",
-    "#     dev_data_sent_2.append(vocab[tokenizer(clean_text(dev_sent_2))])\n",
-    "\n",
-    "# dev_data_sent_1 = pad_sequences(dev_data_sent_1, MAX_LEN // 2, value=vocab[vocab.padding_token])#, padding='post')\n",
-    "# dev_data_sent_2 = pad_sequences(dev_data_sent_2, MAX_LEN // 2, value=vocab[vocab.padding_token])#, padding='post')\n",
     "\n",
     "dev_data_sents = pad_sequences(dev_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
-    "# bos_tokens = np.asarray([[vocab[vocab.bos_token]]] * dev_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# eos_tokens = np.asarray([[vocab[vocab.eos_token]]] * dev_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# sep_tokens = np.asarray([[vocab[vocab.sep_token]]] * dev_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# cls_tokens = np.asarray([[vocab[vocab.cls_token]]] * dev_data_sent_1.shape[0], dtype=np.int64)\n",
-    "\n",
-    "# dev_data_sents = np.concatenate((bos_tokens, dev_data_sent_1, eos_tokens, sep_tokens, \n",
-    "#                                    bos_tokens, dev_data_sent_2, eos_tokens, cls_tokens), axis=-1)\n",
     "\n",
     "dev_data_sents = np.array(dev_data_sents, dtype=np.int64)"
    ]
@@ -1132,6 +1103,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
