--- a/7.PRETRAIN_METHOD/7.3.gpt2_finetune-KOR.ipynb
+++ b/7.PRETRAIN_METHOD/7.3.gpt2_finetune-KOR.ipynb
@@ -4,23 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0512 15:48:23.054007 139913215973184 file_utils.py:38] PyTorch version 1.4.0 available.\n",
-      "I0512 15:48:23.055145 139913215973184 file_utils.py:54] TensorFlow version 2.1.0 available.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "setGPU: Setting GPU to: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
@@ -122,12 +106,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#random seed 고정\n",
-    "\n",
     "tf.random.set_seed(0)\n",
     "np.random.seed(0)\n",
     "\n",
@@ -232,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,82 +433,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>document</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6270596</td>\n",
-       "      <td>굳 ㅋ</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>9274899</td>\n",
-       "      <td>GDNTOPCLASSINTHECLUB</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8544678</td>\n",
-       "      <td>뭐야 이 평점들은.... 나쁘진 않지만 10점 짜리는 더더욱 아니잖아</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6825595</td>\n",
-       "      <td>지루하지는 않은데 완전 막장임... 돈주고 보기에는....</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6723715</td>\n",
-       "      <td>3D만 아니었어도 별 다섯 개 줬을텐데.. 왜 3D로 나와서 제 심기를 불편하게 하죠??</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id                                           document  label\n",
-       "0  6270596                                                굳 ㅋ      1\n",
-       "1  9274899                               GDNTOPCLASSINTHECLUB      0\n",
-       "2  8544678             뭐야 이 평점들은.... 나쁘진 않지만 10점 짜리는 더더욱 아니잖아      0\n",
-       "3  6825595                   지루하지는 않은데 완전 막장임... 돈주고 보기에는....      0\n",
-       "4  6723715  3D만 아니었어도 별 다섯 개 줬을텐데.. 왜 3D로 나와서 제 심기를 불편하게 하죠??      0"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'DATA_TEST_PATH' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-aea32b086137>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_TEST_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'\\t'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquoting\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'DATA_TEST_PATH' is not defined"
+     ]
     }
    ],
    "source": [
@@ -605,19 +524,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 128\n",
     "NUM_EPOCHS = 20\n",
     "VALID_SPLIT = 0.2\n",
-    "MAX_LEN = 80 # Average total * 2"
+    "SENT_MAX_LEN = 31\n",
+    "MAX_LEN = (SENT_MAX_LEN * 2) + 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,42 +584,14 @@
     "train_data_sents = list()\n",
     "\n",
     "for train_sent_1, train_sent_2 in zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent_1))] + \\\n",
+    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(train_sent_1))][:SENT_MAX_LEN] + \\\n",
     "    [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "    vocab[tokenizer(clean_text(train_sent_2))] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "    vocab[tokenizer(clean_text(train_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
     "    \n",
     "    train_data_sents.append(tokens)\n",
     "train_data_sents = pad_sequences(train_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
     "\n",
     "train_data_sents = np.array(train_data_sents, dtype=np.int64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([    3,     3,     3,     3,     3,     3,     3,     3,     3,\n",
-       "           3,     3,     3,     3,     3,     3,     3,     3,     3,\n",
-       "           3,     3,     3,     3,     3,     3,     3,     3,     3,\n",
-       "           3,     3,     3,     3,     3,     3,     3,     3,     3,\n",
-       "           3,     3,     3,     3,     3,     3,     3,     3,     3,\n",
-       "           3,     3,     3,     3,     3,     3,     3,     3,     3,\n",
-       "           3,     3,     0,  3214,   996,  2373, 13952, 47612, 16540,\n",
-       "        5886,  3564, 47531,  4394,     1, 48140,     0,   118,  2373,\n",
-       "        9442,   264,  3214,  2777,  4106,   123,     1, 47810])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data_sents[0]"
    ]
   },
   {
@@ -713,9 +605,9 @@
     "dev_data_sents = list()\n",
     "\n",
     "for dev_sent_1, dev_sent_2 in zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(dev_sent_1))] + \\\n",
+    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(dev_sent_1))][:SENT_MAX_LEN] + \\\n",
     "    [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "    vocab[tokenizer(clean_text(dev_sent_2))] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "    vocab[tokenizer(clean_text(dev_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
     "    \n",
     "    dev_data_sents.append(tokens)\n",
     "\n",
@@ -964,26 +856,13 @@
     "# test_data_sent_2 = list()\n",
     "\n",
     "for test_sent_1, test_sent_2 in zip(test_data_xnli['sentence1'], test_data_xnli['sentence2']):\n",
-    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(test_sent_1))] + \\\n",
+    "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(clean_text(test_sent_1))][:SENT_MAX_LEN] + \\\n",
     "    [vocab[vocab.eos_token], vocab[vocab.sep_token], vocab[vocab.bos_token]] + \\\n",
-    "    vocab[tokenizer(clean_text(test_sent_2))] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
+    "    vocab[tokenizer(clean_text(test_sent_2))][:SENT_MAX_LEN] + [vocab[vocab.eos_token], vocab[vocab.cls_token]]\n",
     "    \n",
     "    test_data_sents.append(tokens)\n",
-    "    \n",
-    "#     test_data_sent_1.append(vocab[tokenizer(clean_text(test_sent_1))])\n",
-    "#     test_data_sent_2.append(vocab[tokenizer(clean_text(test_sent_2))])\n",
     "\n",
     "test_data_sents = pad_sequences(test_data_sents, MAX_LEN, value=vocab[vocab.padding_token])\n",
-    "# test_data_sent_1 = pad_sequences(test_data_sent_1, MAX_LEN // 2, value=vocab[vocab.padding_token])#, padding='post')\n",
-    "# test_data_sent_2 = pad_sequences(test_data_sent_2, MAX_LEN // 2, value=vocab[vocab.padding_token])#, padding='post')\n",
-    "\n",
-    "# bos_tokens = np.asarray([[vocab[vocab.bos_token]]] * test_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# eos_tokens = np.asarray([[vocab[vocab.eos_token]]] * test_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# sep_tokens = np.asarray([[vocab[vocab.sep_token]]] * test_data_sent_1.shape[0], dtype=np.int64)\n",
-    "# cls_tokens = np.asarray([[vocab[vocab.cls_token]]] * test_data_sent_1.shape[0], dtype=np.int64)\n",
-    "\n",
-    "# test_data_sents = np.concatenate((bos_tokens, test_data_sent_1, eos_tokens, sep_tokens, \n",
-    "#                                    bos_tokens, test_data_sent_2, eos_tokens, cls_tokens), axis=-1)\n",
     "\n",
     "test_data_sents = np.array(test_data_sents, dtype=np.int64)"
    ]
