add exception about importing setgpu

--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0520 05:02:45.719287 139660024764224 file_utils.py:38] PyTorch version 1.4.0 available.\n",
-      "I0520 05:02:45.722951 139660024764224 file_utils.py:54] TensorFlow version 2.1.0 available.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "setGPU: Setting GPU to: 7\n"
+      "no setGPU\n"
      ]
     }
    ],
@@ -36,7 +28,10 @@
     "import numpy as np\n",
     "import re\n",
     "\n",
-    "import setGPU"
+    "try:\n",
+    "    import setGPU\n",
+    "except:\n",
+    "    print('no setGPU')"
    ]
   },
   {
@@ -602,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
