--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_naver_movie.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_naver_movie.ipynb
@@ -36,7 +36,10 @@
     "import numpy as np\n",
     "import re\n",
     "\n",
-    "import setGPU"
+    "try:\n",
+    "    import setGPU\n",
+    "except:\n",
+    "    print('no setGPU')"
    ]
   },
   {
@@ -745,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
