--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_text_classification_finetune-KOR.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_text_classification_finetune-KOR.ipynb
@@ -39,7 +39,10 @@
     "import numpy as np\n",
     "import re\n",
     "\n",
-    "import setGPU"
+    "try:\n",
+    "    import setGPU\n",
+    "except:\n",
+    "    print('no setGPU')"
    ]
   },
   {
@@ -615,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
