--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no setGPU\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,27 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0520 05:02:47.707562 139660024764224 tokenization_utils.py:418] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-vocab.txt from cache at /home/CompanyAI/.cache/torch/transformers/bb773818882b0524dc53a1b31a2cc95bc489f000e7e19773ba07846011a6c711.535306b226c42cebebbc0dabc83b92ab11260e9919e21e2ab0beb301f267b4c7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-uncased\")\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-uncased\", cache_dir='bert_ckpt')\n",
     "# model = TFBertForSequenceClassification.from_pretrained(\"bert-base-multilingual-uncased\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +78,7 @@
     "\n",
     "# BASE PARAM\n",
     "\n",
-    "BATCH_SIZE = 200\n",
+    "BATCH_SIZE = 32\n",
     "NUM_EPOCHS = 3\n",
     "VALID_SPLIT = 0.2\n",
     "MAX_LEN = 31 * 2 # Average total * 2\n",
@@ -105,22 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['[CLS]', '[MASK]', '[UNK]', '[SEP]', '[PAD]'] \n",
-      " [101, 103, 100, 102, 0]\n",
-      "[101, 1174, 26646, 49345, 13045, 35132, 25169, 47024, 117, 1170, 26646, 11376, 17360, 13212, 79427, 102]\n",
-      "[101, 29155, 10228, 102]\n",
-      "[CLS] 안녕하세요, 반갑습니다 [SEP]\n",
-      "[CLS] hello world [SEP]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Special Tokens\n",
     "print(tokenizer.all_special_tokens, \"\\n\", tokenizer.all_special_ids)\n",
@@ -149,21 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total # dataset: train - 942808, dev - 2490\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load Train dataset\n",
     "\n",
-    "TRAIN_SNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'snli_1.0_train.kor')\n",
+    "TRAIN_SNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'snli_1.0_train.kor.tsv')\n",
     "TRAIN_XNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'multinli.train.ko.tsv')\n",
     "DEV_XNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'xnli.dev.ko.tsv')\n",
     "\n",
@@ -182,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_data_xnli = train_data_xnli[:100]\n",
+    "# train_data_snli_xnli = train_data_snli_xnli[:100]\n",
     "\n",
     "# 토크나이저를 제외하고는 5장에서 처리한 방식과 유사하게 접근\n",
     "def clean_text(sent):\n",
@@ -255,10 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dev_data_xnli = dev_data_xnli[:50]\n",
+    "\n",
     "# 토크나이저를 제외하고는 5장에서 처리한 방식과 유사하게 접근\n",
     "input_ids = []\n",
     "attention_masks = []\n",
@@ -284,17 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# train labels: 942808, #dev labels: 2490\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Label을 Netural, Contradiction, Entailment 에서 숫자 형으로 변경한다.\n",
     "label_dict = {\"entailment\": 0, \"contradiction\": 1, \"neutral\": 2}\n",
@@ -313,74 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0520 05:16:05.878269 139660024764224 configuration_utils.py:254] loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-config.json from cache at /home/CompanyAI/.cache/torch/transformers/33b56ce0f312e47e4d77a57791a4fc6233ae4a560dd2bdd186107058294e58ab.fcb1786f49c279f0e0f158c9972b9bd9f6c0edb5d893dcb9b530d714d86f0edc\n",
-      "I0520 05:16:05.880751 139660024764224 configuration_utils.py:290] Model config BertConfig {\n",
-      "  \"architectures\": [\n",
-      "    \"BertForMaskedLM\"\n",
-      "  ],\n",
-      "  \"attention_probs_dropout_prob\": 0.1,\n",
-      "  \"bos_token_id\": 0,\n",
-      "  \"directionality\": \"bidi\",\n",
-      "  \"do_sample\": false,\n",
-      "  \"eos_token_ids\": 0,\n",
-      "  \"finetuning_task\": null,\n",
-      "  \"hidden_act\": \"gelu\",\n",
-      "  \"hidden_dropout_prob\": 0.1,\n",
-      "  \"hidden_size\": 768,\n",
-      "  \"id2label\": {\n",
-      "    \"0\": \"LABEL_0\",\n",
-      "    \"1\": \"LABEL_1\"\n",
-      "  },\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"intermediate_size\": 3072,\n",
-      "  \"is_decoder\": false,\n",
-      "  \"label2id\": {\n",
-      "    \"LABEL_0\": 0,\n",
-      "    \"LABEL_1\": 1\n",
-      "  },\n",
-      "  \"layer_norm_eps\": 1e-12,\n",
-      "  \"length_penalty\": 1.0,\n",
-      "  \"max_length\": 20,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"model_type\": \"bert\",\n",
-      "  \"num_attention_heads\": 12,\n",
-      "  \"num_beams\": 1,\n",
-      "  \"num_hidden_layers\": 12,\n",
-      "  \"num_labels\": 2,\n",
-      "  \"num_return_sequences\": 1,\n",
-      "  \"output_attentions\": false,\n",
-      "  \"output_hidden_states\": false,\n",
-      "  \"output_past\": true,\n",
-      "  \"pad_token_id\": 0,\n",
-      "  \"pooler_fc_size\": 768,\n",
-      "  \"pooler_num_attention_heads\": 12,\n",
-      "  \"pooler_num_fc_layers\": 3,\n",
-      "  \"pooler_size_per_head\": 128,\n",
-      "  \"pooler_type\": \"first_token_transform\",\n",
-      "  \"pruned_heads\": {},\n",
-      "  \"repetition_penalty\": 1.0,\n",
-      "  \"temperature\": 1.0,\n",
-      "  \"top_k\": 50,\n",
-      "  \"top_p\": 1.0,\n",
-      "  \"torchscript\": false,\n",
-      "  \"type_vocab_size\": 2,\n",
-      "  \"use_bfloat16\": false,\n",
-      "  \"vocab_size\": 105879\n",
-      "}\n",
-      "\n",
-      "I0520 05:16:06.892757 139660024764224 modeling_tf_utils.py:338] loading weights file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-tf_model.h5 from cache at /home/CompanyAI/.cache/torch/transformers/7efc9507bca9e880aea7a38a849d8e16fcd54f2071f8f8143afa5815d00a16f4.25728a4fd7ddaafee2965f5821a206f237b83c672e0bb092881f9b1f5eea2b2f.h5\n",
-      "I0520 05:16:21.131556 139660024764224 modeling_tf_utils.py:376] Layers of TFBertClassifier not initialized from pretrained model: ['dropout_75', 'classifier']\n",
-      "I0520 05:16:21.132550 139660024764224 modeling_tf_utils.py:380] Layers from pretrained model not used in TFBertClassifier: ['nsp___cls', 'mlm___cls']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TFBertClassifier(TFBertPreTrainedModel):\n",
     "    def __init__(self, config, *inputs, **kwargs):\n",
@@ -405,12 +297,12 @@
     "\n",
     "        return logits\n",
     "    \n",
-    "cls_model = TFBertClassifier(BertConfig()).from_pretrained(\"bert-base-multilingual-uncased\")"
+    "cls_model = TFBertClassifier(BertConfig()).from_pretrained(\"bert-base-multilingual-uncased\", cache_dir='bert_ckpt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,23 +317,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data_out/KOR/tf2_KorNLI -- Folder already exists \n",
-      "\n",
-      "Train on 942808 samples, validate on 2490 samples\n",
-      "Epoch 1/3\n",
-      "942800/942808 [============================>.] - ETA: 0s - loss: 0.6875 - accuracy: 0.7039\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.67430, saving model to data_out/KOR/tf2_KorNLI/weights.h5\n",
-      "942808/942808 [==============================] - 3798s 4ms/sample - loss: 0.6875 - accuracy: 0.7039 - val_loss: 0.7324 - val_accuracy: 0.6743\n",
-      "Epoch 2/3\n",
-      "284000/942808 [========>.....................] - ETA: 43:45 - loss: 0.5922 - accuracy: 0.7536"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#학습 진행하기\n",
     "model_name = \"tf2_KorNLI\"\n",
