--- a/7.PRETRAIN_METHOD/7.5.KorQuad_class.ipynb
+++ b/7.PRETRAIN_METHOD/7.5.KorQuad_class.ipynb
@@ -264,30 +264,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-73-1107e569c149>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-73-1107e569c149>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    embedding = self.encoder(self.input_ids, token_type_ids=self.token_type_ids, self.attention_mask=self.attention_mask)[0]\u001b[0m\n\u001b[0m                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
+    }
+   ],
    "source": [
     "class TFBERTKorquad(tf.keras.Model):\n",
     "    def __init__(self, max_len=None):\n",
     "        super(TFBERTKorquad, self).__init__()\n",
-    "        encoder = TFBertModel.from_pretrained(\"distilbert-base-multilingual-cased\")\n",
-    "        input_ids = tf.keras.layers.Input(shape=(max_len,), dtype=tf.int32)\n",
-    "        token_type_ids = tf.keras.layers.Input(shape=(max_len,), dtype=tf.int32)\n",
-    "        attention_mask = tf.keras.layers.Input(shape=(max_len,), dtype=tf.int32) \n",
+    "        self.encoder = TFBertModel.from_pretrained(\"distilbert-base-multilingual-cased\")\n",
+    "        self.input_ids = tf.keras.layers.Input(shape=(max_len,), dtype=tf.int32)\n",
+    "        self.token_type_ids = tf.keras.layers.Input(shape=(max_len,), dtype=tf.int32)\n",
+    "        self.attention_mask = tf.keras.layers.Input(shape=(max_len,), dtype=tf.int32) \n",
     "        \n",
     "        \n",
     "    def call(self):\n",
-    "        embedding = encoder(\n",
-    "        input_ids, token_type_ids=token_type_ids, attention_mask=attention_mask)[0]\n",
-    "        start_logits = layers.Dense(1, name=\"start_logit\", use_bias=False)(embedding)\n",
-    "        start_logits = layers.Flatten()(start_logits)\n",
+    "        embedding = self.encoder(self.input_ids, self.token_type_ids, self.attention_mask)[0]\n",
+    "        start_logits = tf.keras.layers.Dense(1, name=\"start_logit\", use_bias=False)(embedding)\n",
+    "        start_logits = tf.keras.layers.Flatten()(start_logits)\n",
     "\n",
-    "        end_logits = layers.Dense(1, name=\"end_logit\", use_bias=False)(embedding)\n",
-    "        end_logits = layers.Flatten()(end_logits)\n",
+    "        end_logits = tf.keras.layers.Dense(1, name=\"end_logit\", use_bias=False)(embedding)\n",
+    "        end_logits = tf.keras.layers.Flatten()(end_logits)\n",
     "        \n",
-    "        start_probs = layers.Activation(keras.activations.softmax)(start_logits)\n",
-    "        end_probs = layers.Activation(keras.activations.softmax)(end_logits)\n",
+    "        start_probs = tf.keras.layers.Activation(tf.keras.activations.softmax)(start_logits)\n",
+    "        end_probs = tf.keras.layers.Activation(tf.keras.activations.softmax)(end_logits)\n",
     "    \n",
     "        return start_probs, end_probs"
    ]
