--- a/7.PRETRAIN_METHOD/7.5.KorQuad_class_2.ipynb
+++ b/7.PRETRAIN_METHOD/7.5.KorQuad_class_2.ipynb
@@ -416,7 +416,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#korquad_model.compile(optimizer=optimizer, loss=[loss, loss], metrics=[exact_match_callback])\n",
     "korquad_model.compile(optimizer=optimizer, loss=[loss, loss])"
    ]
   },
@@ -497,9 +496,19 @@
     "    y_train,\n",
     "    epochs=1,  # For demonstration, 3 epochs are recommended\n",
     "#     verbose=2,\n",
-    "    batch_size=2, #64\n",
+    "    batch_size=64, #2->64\n",
     "    callbacks=[exact_match_callback, earlystop_callback, cp_callback]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graphs(history, 'accuracy')\n",
+    "plot_graphs(history, 'loss')"
    ]
   },
   {
